--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Untitled-1.css">
+    <title>Amostra INF</title>
 </head>
 <body>
     
 </body>
+
+    <header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Logo_CEFET-MG.png">
+        <a href="">Link Para Seção</a>
+        <a href="">Link Para Seção</a>
+        <a href="">Link Para Seção</a>
+    </header>
 </html>
