--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <div class="caixinhas-box-principal">
 
             <div class="caixinha-img-textinho">
-                <img src="Imagens E videos/Sobre-Medio.png">
+                <img src="Imagens E videos/1.png">
                 <h2>ENSINO MÉDIO</h2>
             </div>
     
             <div class="caixinha-img-textinho">
-                <img src="Imagens E videos/Sobre-Tecn.png">
+                <img src="Imagens E videos/2.png">
                 <h2>ENSINO TÉCNICO</h2>
             </div>
         </div>
@@ -115,12 +115,12 @@
         <div class="caixinhas-box-principal">
 
             <div class="caixinha-img-textinho">
-                <img src="Imagens E videos/SoftWare.png">
+                <img src="Imagens E videos/3.png">
                 <h2>Software</h2>
             </div>
     
             <div class="caixinha-img-textinho">
-                <img src="Imagens E videos/HardWare.png">
+                <img src="Imagens E videos/4.png">
                 <h2>Hardware</h2>
             </div>
 
